--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -29,7 +29,7 @@
                             <a (click)="signInWithGoogle()" style="text-decoration: none;cursor: pointer;">
                                 <div class="card shadow text-center">
                                     <div class="card-body">
-                                        <img src="/authonti-full/src/assets/googlee.png" alt="" height="50px" width="50px"> Sign In with Google
+                                        <img src="../../../assets/googlee.png" alt="" height="50px" width="50px"> Sign In with Google
                                     </div>
                                 </div>
                             </a>
