--- a/src/app/component/varify-email/varify-email.component.html
+++ b/src/app/component/varify-email/varify-email.component.html
@@ -1,8 +1,7 @@
-
 <body>
     <!-- Header -->
     <header>
-        <a href="#" class="logo"><img src="img/jeep.png" alt=""></a>
+        <a href="#" class="logo"><img src="../../../assets/img/jeep.png" alt=""></a>
 
         <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -10,7 +9,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#ride">Ride</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#reviews">About</a></li>
             <li><a href="#reviews">Reviews</a></li>
         </ul>
         <div class="header-btn">
@@ -18,14 +17,11 @@
         </div>
     </header>
     <!-- Home -->
-    <section class="home" id="home">
+    <section class="home" id="home" style="background-image: url('../../../assets/img/Car\ Website\ –\ 1@2x.png');">
         <div class="text">
             <h1><span>Looking</span> to <br>rent a car</h1>
-            <p>Most Awesome Drag & Drop WordPress Theme</p>
-            <div class="app-stores">
-                
-                <img src="img/512x512.png" alt=""    >
-            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adi <br> pisicing elit. Fuga, ut qui.</p>
+            
         </div>
 
         <div class="form-container">
@@ -55,7 +51,6 @@
         <div class="ride-container">
             <div class="box">
                 <i class='bx bxs-map'></i>
-                <img src="src/assets/car3.jpg" alt="">
                 <h2>Choose A Location</h2>
                 <p> The place where the renter wants to collect the car must be specified </p>
             </div>
@@ -77,7 +72,6 @@
     <section class="services" id="services">
         <div class="heading">
             <span>Best Services</span>
-            <h1>Explore Out Top Deals <br> From Top Rated Dealers</h1>
         </div>
        <div class="body">
            <div class="row">
@@ -101,7 +95,7 @@
         </div>
         <div class="about-container">
             <div class="about-img">
-                <img src="img/about.png" alt="">
+                <img src="../../../assets/img/about.png" alt="">
             </div>
             <div class="about-text">
                 <span>About Us</span>
@@ -131,14 +125,6 @@
             <a href="#" class="btn">Subscribe</a>
         </div>
     </section>
-    <div class="copyright">
-        <p>&#169; CarpoolVenom All Right Reserved</p>
-        <div class="social">
-            <a href="#"><i class='bx bxl-facebook' ></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-instagram' ></i></a>
-        </div>
-    </div>
 
 <!-- ScrollReveal -->
 <script src="https://unpkg.com/scrollreveal"></script>
