--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -14,6 +14,10 @@
                         <input type="text" class="form-control" id="Price" name="price" [(ngModel)]="price">
                         <label for="lastName">Car price</label>
                     </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="photourl" name="photourl" [(ngModel)]="photourl">
+                        <label for="lastName">Car photo path</label>
+                    </div>
                     <button type="button" class="btn btn-outline-success" (click)="addCar()">Add Car</button>
             </div>
         </div>
@@ -26,6 +30,7 @@
                           <tr>
                             <th scope="col">Car name</th>
                             <th scope="col">Car price</th>
+                            <th scope="col">Car photo</th>
                             <th scope="col">Action</th>
                           </tr>
                         </thead>
@@ -33,6 +38,8 @@
                           <tr *ngFor="let car of cars">
                             <td >{{car.name}}</td>
                             <td>{{car.price}}</td>
+                            <td><img width="100px" src="{{car.photourl}}" alt=""></td>
+
                             <td>
                                 <button class="btn btn-outline-danger" (click)="deleteCar(car)">Delete</button>
                             </td>
